--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="hero-body">
             <div class="container">
               <h1 class="title">
-                Movie Fight
+                Movie Fight2
                 <span class="icon">
                   <i class="fas fa-film"></i>
                 </span>
@@ -41,8 +41,8 @@
             </div>
 
             <div class="column is-half notification is-primary tutorial">
-              <h1 class="title">Search for a movie on Both sides</h1>
-              <p class="subtitle">We will tell you which is best!</p>
+              <h1 class="title">Search for a movie on Both sides2</h1>
+              <p class="subtitle">We will tell you which is best!2</p>
             </div>
              
          
